# Grades-Analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/grades_analyzer/: cli.py  io.py  models.py  tabulate_utils.py
src/grades_analyzer/reports/: base.py  student_performance.py
tests/: test_cli.py  test_errors.py  test_io.py  test_student_performance.py
